# dreamland_code

./: .gitignore  CMakeLists.txt
plug-ins/groups/: group_arcane.cpp
src/: CMakeLists.txt  makebits.pl
src/alloc/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/behavior/: CMakeLists.txt
src/core/clan/: CMakeLists.txt
src/core/fenia/: CMakeLists.txt
src/core/scheduler/: CMakeLists.txt
src/core/skills/: CMakeLists.txt
src/fenia/: CMakeLists.txt  codesource.h  function.h  manager-decl.h  manager-impl.h  object.h
src/flags/: CMakeLists.txt
src/io/: CMakeLists.txt  dldirectory.cpp  socketmanager.cpp  txncontext.cpp
src/l10n/: CMakeLists.txt  Makefile.am  flexer.cpp  ru_prepositions.cpp  ru_prepositions.h
src/lang/: CMakeLists.txt
src/process/: CMakeLists.txt
src/util/: CMakeLists.txt  dl_ctype.cpp  dl_ctype.h
src/xml/: xmlmap.h
tests/: CMakeLists.txt  dummy_test.cpp
tests/l10n/: ru_prepositions_test.cc
